src/App.css
#root {
  position: relative;
  overflow: hidden;
  /* display: flex; */
  /* flex-direction: column; */

  background-repeat: no-repeat;
  background-size: cover;
  background-image: url("/assets/saint-antonien-2000w.webp");
  height: 100vh;
  width: 100vw;
}
* {
  font-family: "Abel", sans-serif;
  font-family: "Lato", sans-serif;
}
.black-out {
  position: absolute;
  top: 0;
  left: 0;
}
.black-out::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  animation-name: blackOut;
  animation-duration: 0.5s; /* Duration of the animation */
  animation-fill-mode: forwards;
}
.btn-wrapper {
  overflow: hidden;
}
.discover-btn {
  visibility: hidden;
}
.full-screen .discover-btn {
  color: white;
  font-size: 1.5rem;
  padding: 0.5rem 1rem 0.5rem 1rem;
  width: auto;
  background-color: transparent;
  border-radius: 50%;
  animation: slideUp 0.5s ease-out 0.4s 1 forwards;
  transition: background-color 0.3s ease-out;
  border: 2px solid white;
}
.full-screen .discover-btn:hover {
  /* animation: btnHover 0.3s ease-out 0s 1 forwards; */
  background-color: rgba(255, 255, 255, 0.3);
}
@keyframes identifier {
}
.card-title {
  transform: translateY(100px);
  color: white;
  font-size: 1rem;
}

.home-discover-btn {
  visibility: hidden;
  color: white;
  font-size: 1.5rem;
  padding: 0.5rem 1rem 0.5rem 1rem;
  width: auto;
  background-color: transparent;
  border-radius: 50%;
  animation: slideUp 0.5s ease-out 0.4s 1 forwards;
  transition: background-color 0.3s ease-out;
  border: 2px solid white;
  animation: 0.5s ease-out 0.4s 1 slideUp forwards;
}
.home-discover-btn:hover {
  /* animation: btnHover 0.3s ease-out 0s 1 forwards; */
  background-color: rgba(255, 255, 255, 0.3);
}
.home-title {
  margin: 0;
  animation: 0.5s ease-out 0s 1 slideUp;
  font-size: 1rem;
}

.full-screen .card-title {
  animation: slideUp 0.5s ease-out 0s 1 forwards;
}
.card-subTitle {
  text-transform: uppercase;
  padding: 0.5rem;
}
.home-subTitle {
  text-transform: uppercase;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  visibility: hidden;
  padding: 0.5rem;
  animation: slideUp 0.5s ease-out 0.15s 1 forwards;
}

.bottom-wrapper {
  width: 100%;
  position: relative;
}
.bar-wrapper {
  position: relative;
  z-index: 100;
}
.slider-wrapper {
  height: fit-content;
  position: absolute;
  justify-self: flex-end;
  display: flex;
  flex-direction: column;
  align-items: center;
  bottom: 10%;
  width: 100vw;
}
.bar {
  min-width: 80% !important;
  height: 5px !important;
}

.buttons {
  bottom: 15%;
  left: 45%;
  z-index: 100;
}
.slider-btn {
  padding: 2rem;
  height: 50px;
  width: 50px;
  background-color: transparent;
  border: 2px solid white;
  border-radius: 50%;
}
.slider-btn:hover {
  background-color: rgba(255, 255, 255, 0.5);
  border: 2px solid white;
  cursor: pointer;
}
.slider-container {
  height: 30%;
  width: 40%;
  border: 2px solid white;
  overflow: hidden;
}
.card-slider {
  left: 40%;
  position: relative;
  z-index: 100;
  max-width: 500px;
  display: flex;
}

.image-card {
  overflow: hidden;
  box-shadow: rgb(0, 0, 0) 15px 15px 50px;
  border-radius: 15px;
  margin: 0 1rem 0 1rem;
  min-width: 200px;
  position: relative;
  max-width: 200px;
  object-fit: contain;
  height: 300px;
  display: flex;
  justify-content: flex-end;
  flex-direction: column;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
.image-card.full-screen {
  margin: 0;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  position: fixed;
  left: 0;
  top: 0;
  z-index: -1;
  min-height: 100vh;
  min-width: 100vw;
  width: 100vw;
}
.image-card.full-screen .small-title {
  display: none;
  transform: translateY(200px);
}
.absolute {
  position: absolute;
  transform: translateY(200px);
}
.offset {
  transform: translateX(-282px);
}
div.image-card.full-screen {
  justify-content: flex-start;
  margin: 0;
  border-radius: 0;
}
/* p {
  height: 0px;
  overflow: hidden;
  color: white;
  width: 30%;
} */
/* div.image-card.full-screen p {
  font-size: 1rem;
  transition: height 0.25s ease-in;
  transition-delay: 0.15s;
  height: 50px;
  min-height: fit-content;
  position: relative;
  display: block;
  width: 100%;
} */
.card-text {
  font-size: 1rem;
  color: white;
  transform: translateY(200px);
}
.home-text {
  visibility: hidden;
  font-size: 1rem;
  color: white;
  animation: slideUp 0.3s ease-out 0.4s 1 forwards;
}
.full-screen .card-text {
  transform: translateY(0);
  transition: transform 0.5s;
  transition-delay: 0.4s;
  height: fit-content !important;
}
div.image-card.full-screen {
  display: flex;
  flex-direction: column;
}
.info-block {
  overflow: hidden;
  height: 0;
  max-height: 0;
}
div.image-card.full-screen .info-block {
  max-height: 500px;
  height: fit-content;
  margin-top: 5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 40px;
  text-align: center;
  width: 100vw;
  position: relative;
  top: 5%;
  padding: 1rem 1rem 1rem 4rem;
}
.title-div {
  overflow: hidden;
}
.subTitle-div {
  overflow: hidden;
}
.text-div {
  overflow: hidden;
}
div.image-card.full-screen .info-block h1 {
  animation: slideUp 0.5s ease-out 0.15s 1 forwards;
  transition-delay: 0.15s;
  font-size: 30px;
  height: fit-content;
  max-height: 200px;
}
.info-block h1 {
  visibility: hidden;
  /* transform: translateY(200px); */
  overflow: hidden;
  height: 0;
  max-height: 0;
  font-size: 0;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  position: relative;
  color: white;
}
.NavBar {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1000;
  background-color: transparent;
}
.NavBar a {
  color: white;
  font-weight: bold;
  font-size: 1.2rem;
  text-shadow: 1px 1px 2px black;
}
.globe-icon {
  padding-right: 0.5rem;
}

.full-screen .small-title1 {
  display: none;
}
.full-screen .small-title2 {
  display: none;
}
.small-title1 {
  font-size: 0.75rem;
  max-width: 100%;
  position: absolute;
  bottom: 15%;
  color: white;
}
.small-title2 {
  font-size: 0.75rem;
  max-width: 100%;
  position: absolute;
  bottom: 8%;
  color: white;
}
.home-block {
  color: white;
  max-height: 500px;
  height: fit-content;
  margin-top: 5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 40px;
  text-align: center;
  width: 100vw;
  position: relative;
  padding: 1rem 1rem 1rem 1rem;
}

@keyframes slideUp {
  from {
    transform: translateY(500px);
    visibility: hidden;
  }
  to {
    transform: translateY(0);
    visibility: visible;
  }
}
@keyframes blackOut {
  from {
    background-color: rgba(
      0,
      0,
      0,
      0
    ); /* Starting background color with no opacity */
  }
  to {
    background-color: rgba(
      0,
      0,
      0,
      0.8
    ); /* Ending background color with opacity */
  }
}
@keyframes btnHover {
  from {
    background-color: transparent;
  }
  to {
    background-color: rgba(255, 255, 255, 0.3);
  }
}

@media screen and (min-width: 996px) {
  .bottom-wrapper {
    width: 60vw !important;
    max-width: 60vw !important;
    left: 20%;
    position: relative;
    flex-direction: row-reverse;
    justify-content: space-between;
  }
  .bar-wrapper {
    width: 30vw;
    left: auto;
    bottom: 17%;
  }
  .slider-wrapper {
    height: fit-content;
    position: absolute;
    justify-self: flex-end;
    bottom: 20%;
  }
  .card-slider {
    position: relative;
    z-index: 100;
    height: 350px;
    min-height: fit-content;
    max-width: 500px;
    display: flex;
  }
  .card-title {
    font-size: 1.5rem;
    height: auto;
    width: 100vw;
  }
  .card-subTitle {
    width: 100%;
  }
  div.image-card.full-screen .info-block h1 {
    font-size: calc(2.5rem + 1.5vw);
  }
  .image-card {
    position: relative;
    box-shadow: rgb(0, 0, 0) 15px 15px 50px;
    border-radius: 15px;
    margin: 0 1rem 0 1rem;
    min-width: 250px;
    /* max-width: 300px; */
    width: 300px;
    object-fit: contain;
    height: 300px;
    display: flex;
    justify-content: flex-end;
    flex-direction: column;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
  }
  div.image-card.full-screen .info-block {
    position: absolute;
    max-width: 40%;
    top: 20%;
    max-height: 500px;
    height: fit-content;
    margin-top: 5rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 40px;
    text-align: center;
    width: 100vw;
    padding: 1rem 1rem 1rem 4rem;
  }
  .buttons {
    position: relative;
    left: 0;
    width: min-content;
  }
  .small-title2 {
    font-size: 20px;
    bottom: 5%;
  }
  .home-block {
    position: absolute;
    max-width: 40%;
    top: 20%;
    max-height: 500px;
    height: fit-content;
    margin-top: 5rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 40px;
    text-align: center;
    width: 100vw;
    padding: 1rem 1rem 1rem 1rem;
  }
  .home-block h1 {
    font-size: calc(2.5rem + 1.5vw);
    text-transform: uppercase;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  }
  .home-title {
    font-size: 1.5rem;
  }
}

